# norake-backend

./: .env.example  .env.test  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  doc_id.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_document.txt  test_document_e2e.txt  test_tags_api.py  validate_workflow.py
.github/: copilot-instructions.md
docs/: 7_DAY_SPRINT_PLAN.md  API_TESTING_CHECKLIST.md  ASYNC_RELATIONSHIPS_GUIDE.md  CHAT_MESSAGE_STRUCTURE_FIX.md  CLASS_BASED_PROTECTED_ROUTERS.md  COOKIE_AUTH_QUICK_REFERENCE.md  DEVELOPMENT_PLAN.md  DOCUMENT_SERVICES_QUICK_START.md  EXCEPTION_HANDLING_FIX.md  FIXTURES_GUIDE.md  FRONTEND_CHAT_INTEGRATION.md  FRONTEND_COOKIES_RECOMMENDATIONS.md  FRONTEND_RECOMMENDATIONS_PROMPT.md  MCP_PLANE_CHECK_RESULTS.md  MCP_PLANE_FINAL_REPORT.md  MCP_PLANE_QUICK_REFERENCE.md  MCP_PLANE_SETUP.md  MVP_EXTENDED_PLAN.md  NoRake_API_Collection.postman_collection.json  NoRake_API_Collection_clean.postman_collection.json  NoRake_Complete_API_Collection.postman_collection.json  NoRake_Complete_API_Collection_clean.json  NoRake_Complete_API_Collection_clean.postman_collection.json  NoRake_Complete_Test_Scenarios.postman_collection.json  NoRake_Production_API_Final.json  NoRake_Production_API_Import.postman_collection.json  NoRake_Production_Complete_Tests.postman_collection.json  NoRake_Production_Tests.postman_collection.json  NoRake_Production_Tests_compressed.json  OLLAMA_EMBEDDINGS_QUICK_START.md  OLLAMA_INTEGRATION_SUMMARY.md  OPENROUTER_FIXES_QUICK_CHECK.md  OPENROUTER_MODELS_CONFIG.md  OPENROUTER_QUICK_TEST.md  OPENROUTER_RATE_LIMIT_FIX.md  OPENROUTER_TROUBLESHOOTING.md  POPPLER_SETUP.md  POSTMAN_MANUAL_SETUP.md  POSTMAN_TESTING_GUIDE.md  POSTMAN_TESTING_SUMMARY.md  (+13 more)
docs/n8n_workflows/: N8N_WORKFLOWS.md  README.md  auto-categorize-issues.json  kb-indexing-pipeline.json  smart-search-helper.json
docs/templates/: QUICKSTART.md  README.md  WORKFLOW.md  create_developer_template.py  create_developer_template.sql  create_templates.py  create_templates.sql  developer-issue-template.json  developer-issue-template.md  (+2 more)
fixtures_data/: README.md  document_services_manuals.json  openrouter_embedding_models.json  openrouter_models.json  templates.json
scripts/: IMPORT_MANUALS_README.md  README.md  check_document_sizes.py  check_plane_api.py  check_postman.py  check_postman_detailed.py  clean_postman.py  commands.py  fetch_embedding_models.py  fix_document_sizes.py  fix_templates_json.py  generate_manuals_fixture.py  import_manuals_from_workaedb.py  import_manuals_via_api.py  init_minio.ps1  init_minio.sh  load_document_services_fixtures.py  migrate_chat_messages_structure.py  test_ollama_embeddings.py
src/: main.py
(+217 files in other folders)
