[project]
authors = [
  {name = "Mike", email = "toshkin.mikhail@ya.ru"},
]
dependencies = [
  "alembic>=1.12.1", # Миграции для SQLAlchemy
  "aio-pika>=9.5.7", # Асинхронный клиент RabbitMQ
  "asyncpg>=0.30.0", # Асинхронный драйвер PostgreSQL
  "fastapi>=0.116.1", # Фреймворк для API
  "faststream[rabbit]>=0.4.6", # RabbitMQ интеграция
  "greenlet>=3.1.1", # Зависимость для SQLAlchemy
  "itsdangerous>=2.1.0", # Cryptographically signed session cookies
  "passlib[argon2]>=1.7.4", # Хеширование паролей через Argon2
  "pydantic[email]>=2.11.7", # Валидация и типизация данных
  "pydantic-settings>=2.10.1", # Управление конфигурацией через Pydantic
  "pytz>=2025.2", # Работа с часовыми поясами
  "python-jose[cryptography]>=3.5.0", # JWT токены
  "sqlalchemy>=2.0.0", # ORM
  "python-multipart>=0.0.20", # Парсинг multipart/form-data (загрузка файлов)
  "uvicorn>=0.35.0", # ASGI сервер для запуска FastAPI
  "starlette>=0.48.0",
  "redis>=6.4.0", # Redis клиент для кэширования
]
description = ""
name = "norake-backend"
requires-python = ">= 3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "httpx",
]

[project.scripts]
bootstrap = "scripts.commands:activate" # Инициализация окружения
check = "scripts.commands:check" # Проверка зависимостей и конфигурации
dev = "scripts.commands:dev" # Запуск в режиме разработки
format = "scripts.commands:format_code" # Форматирование кода
infra-test = "scripts.commands:infra_test" # Запуск тестовой инфраструктуры
lint = "scripts.commands:lint" # Линтинг кода
migrate = "scripts.commands:migrate" # Миграции БД
serve = "scripts.commands:serve" # Запуск сервера
setup = "scripts.commands:setup" # Первичная настройка проекта
start = "scripts.commands:start_all" # Запуск всех сервисов
test = "scripts.commands:test" # Запуск тестов

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.setuptools]
packages = ["src", "scripts"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
